RESOLVED FIXED141086
focusing of disabled fieldset element is not prevented
https://bugs.webkit.org/show_bug.cgi?id=141086
Summary focusing of disabled fieldset element is not prevented
Rodney Rehm
Reported 2015-01-30 09:56:59 PST
Created attachment 245722 [details] test case Steps to reproduce the problem: 1. create element <fieldset tabindex="0" disabled> 2. try to focus the fieldset What is the expected behavior? fieldset is not focused What went wrong? fieldset becomes the activeElement specification: http://www.w3.org/TR/html5/disabled-elements.html#concept-element-disabled Chromium bug for reference: https://code.google.com/p/chromium/issues/detail?id=453847
Attachments
test case (950 bytes, text/html)
2015-01-30 09:56 PST, Rodney Rehm
no flags
Gurpreet
Comment 1 2015-02-10 05:01:27 PST
Working on the issues. Will raise a patch soon.
Ahmad Saleem
Comment 2 2022-08-30 16:11:55 PDT
All browser differ but Safari Technology Preview seems to be wrong: *** STP 152 on macOS 12.5.1 *** activeElement: BODY focus: FIELDSET *** Firefox Nightly 106 *** activeElement: BODY focus: #document *** Chrome Canary 107 *** activeElement: BODY _____________________ Chrome / Blink fixed this in following commit: https://chromium.googlesource.com/chromium/src.git/+/1637db318e525b5c1e3a960eeb59dee151f049ca https://github.com/WebKit/WebKit/blob/05525a74d4ef2d19f84efc193f104730713958d5/Source/WebCore/html/HTMLFieldSetElement.cpp#L153 This is line to change to make this work. I can do this quickly. Thanks!
Ahmad Saleem
Comment 3 2022-08-30 16:29:00 PDT
Radar WebKit Bug Importer
Comment 4 2022-08-30 20:16:04 PDT
EWS
Comment 5 2022-08-31 10:06:11 PDT
Committed 253993@main (8ddd66fb04db): <https://commits.webkit.org/253993@main> Reviewed commits have been landed. Closing PR #3828 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.