focusing of disabled fieldset element is not prevented

focusing of disabled fieldset element is not prevented

https://bugs.webkit.org/show_bug.cgi?id=141086

Reviewed by Ryosuke Niwa.

Merge - https://chromium.googlesource.com/chromium/src.git/+/1637db318e525b5c1e3a960eeb59dee151f049ca

It is to align with web-specification and both Gecko and Blink.

https://html.spec.whatwg.org/multipage/semantics-other.html#concept-element-disabled

* Source/WebCore/html/HTMLFieldSetElement.cpp:
(HTMLFieldSetElement::supportsFocus()) - Modify to add !isDisabledFormControl logic to check before focusing.
* LayoutTests/fast/forms/fieldset/fieldset-disabled.html: Modified to accomodate "tabindex' case.
* LayoutTests/fast/forms/fieldset/fieldset-disabled-expected.txt: Updated Expectations for 'tabindex' case

Canonical link: https://commits.webkit.org/253993@main